<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
        >
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.opensocial</groupId>
        <artifactId>rave-chemistry</artifactId>
        <version>0.1-SNAPSHOT</version>
    </parent>

    <groupId>org.opensocial</groupId>
    <artifactId>rave-chemistry-package</artifactId>
    <name>Apache Rave &amp; Chemistry Integration Packager</name>
    <description>Packaging and running of the integrated piece</description>
    <packaging>war</packaging>

    <properties>
        <javax.mail.version>1.4.4</javax.mail.version>
        <jsp-api.version>2.1</jsp-api.version>
        <el-api.version>1.0</el-api.version>
        <cargo.version>1.1.0</cargo.version>
        <cargo.debug.address>8000</cargo.debug.address>
        <cargo.debug.suspend>n</cargo.debug.suspend>
        <cargo.args/>
        <cargo.version>1.1.0</cargo.version>
        <javaagent/>
        <!-- Force maven-filesync-plugin rewrite the Eclipse FileSync plugin configuration with
     $mvn filesync:generate -Dmaven.filesync.override=true -->
        <maven.filesync.override>false</maven.filesync.override>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.chemistry.opencmis</groupId>
            <artifactId>chemistry-opencmis-server-inmemory</artifactId>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>org.apache.rave</groupId>
            <artifactId>rave-shindig</artifactId>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>org.opensocial</groupId>
            <artifactId>rave-chemistry-gadgets</artifactId>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>org.opensocial</groupId>
            <artifactId>rave-chemistry-portal</artifactId>
            <type>war</type>
        </dependency>
        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>mail</artifactId>
        </dependency>
        <dependency>
            <groupId>javax.activation</groupId>
            <artifactId>activation</artifactId>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>dist</id>
            <build>
                <defaultGoal>install</defaultGoal>
                <plugins>
                    <plugin>
                        <artifactId>maven-clean-plugin</artifactId>
                        <executions>
                            <execution>
                                <phase>validate</phase>
                                <goals>
                                    <goal>clean</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <defaultGoal>install</defaultGoal>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.3.2</version>
                    <configuration>
                        <source>1.6</source>
                        <target>1.6</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>2.1.1</version>
                </plugin>
                <plugin>
                    <groupId>com.googlecode.mavenfilesync</groupId>
                    <artifactId>maven-filesync-plugin</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <override>${maven.filesync.override}</override>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>generate</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.cargo</groupId>
                <artifactId>cargo-maven2-plugin</artifactId>
                <version>${cargo.version}</version>
                <configuration>
                    <wait>true</wait>
                    <configuration>
                        <properties>
                            <cargo.jvmargs>
                                <![CDATA[-Xms512m -XX:MaxPermSize=128m -Dh2.bindAddress="localhost" -Xdebug -Xrunjdwp:transport=dt_socket,address=${cargo.debug.address},server=y,suspend=${cargo.debug.suspend} -noverify ${javaagent} ${cargo.args}]]>
                            </cargo.jvmargs>
                            <cargo.tomcat.context.reloadable>true</cargo.tomcat.context.reloadable>
                        </properties>
                        <home>${project.build.directory}/tomcat6x</home>
                        <deployables>
                            <deployable>
                                <groupId>org.apache.rave</groupId>
                                <artifactId>rave-shindig</artifactId>
                                <type>war</type>
                                <properties>
                                    <context>/ROOT</context>
                                </properties>
                            </deployable>
                            <deployable>
                                <groupId>org.apache.chemistry.opencmis</groupId>
                                <artifactId>chemistry-opencmis-server-inmemory</artifactId>
                                <type>war</type>
                                <properties>
                                    <context>/chemistry</context>
                                </properties>
                            </deployable>
                            <deployable>
                                <groupId>org.opensocial</groupId>
                                <artifactId>rave-chemistry-gadgets</artifactId>
                                <type>war</type>
                                <!-- I tried giving this name gagdets and it did not work. -->
                                <properties>
                                    <context>/demogadgets</context>
                                </properties>
                            </deployable>
                            <deployable>
                                <groupId>org.opensocial</groupId>
                                <artifactId>rave-chemistry-portal</artifactId>
                                <type>war</type>
                                <properties>
                                    <context>/portal</context>
                                </properties>
                            </deployable>
                        </deployables>
                    </configuration>
                    <container>
                        <containerId>tomcat6x</containerId>
                        <timeout>180000</timeout>
                        <zipUrlInstaller>
                            <downloadDir>${settings.localRepository}/org/codehaus/cargo/cargo-container-archives</downloadDir>
                            <url>
                                http://archive.apache.org/dist/tomcat/tomcat-6/v6.0.35/bin/apache-tomcat-6.0.35.tar.gz
                            </url>
                        </zipUrlInstaller>
                        <systemProperties>
                            <net.sf.ehcache.skipUpdateCheck>true</net.sf.ehcache.skipUpdateCheck>
                            <!--  un-comment following property for: Loading the SizeOfAgent will probably fail,
                            as you are running on Apple OS X and have a value set for java.io.tmpdir  -->
                            <!-- <net.sf.ehcache.pool.sizeof.AgentSizeOf.bypass>true</net.sf.ehcache.pool.sizeof.AgentSizeOf.bypass>  -->

                            <!-- Documentation: http://rave.apache.org/documentation/host-configuration.html -->
                            <!--
                                <portal.override.properties>/path/to/custom.portal.properties</portal.override.properties>
                                <rave-shindig.override.properties>/path/to/custom.shindig.properties</rave-shindig.override.properties>
                                <shindig.host>localhost</shindig.host>
                                <shindig.port>8080</shindig.port>
                                <shindig.contextroot />
                            -->
                        </systemProperties>
                        <dependencies>
                            <dependency>
                                <groupId>javax.mail</groupId>
                                <artifactId>mail</artifactId>
                                <classpath>shared</classpath>
                            </dependency>
                            <dependency>
                                <groupId>javax.activation</groupId>
                                <artifactId>activation</artifactId>
                                <classpath>shared</classpath>
                            </dependency>
                        </dependencies>
                    </container>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
